# SoapySDRPlay3

./: .gitignore  Antenna.cpp  CLAUDE.md  CMakeLists.txt  DeviceControl.cpp  Frequency.cpp  Gain.cpp  HealthMonitor.cpp  IPCPipe.cpp  IPCPipe.hpp  Identification.cpp  README.md  Registration.cpp  RingBuffer.cpp  RingBuffer.hpp  SDRplayLock.cpp  SDRplayLock.hpp  SampleRate.cpp  Settings.cpp  SettingsAPI.cpp  SoapySDRPlay.hpp  SoapySDRPlayProxy.cpp  SoapySDRPlayProxy.hpp  SoapySDRPlayWorker.cpp  SoapySDRPlayWorker.hpp  Streaming.cpp  sdrplay_api.cpp  sdrplay_worker_main.cpp
scripts/: fix-sdrplay-full.sh  install-recovery-scripts.sh  sdrplay-service-restart  sdrplay-usb-reset  sdrplay.sudoers
tests/: hil_dual_read.cpp  mock_sdrplay_api.cpp  release_test.cpp  run_hil_dual_read.sh  stress_test_framework.hpp  stress_tests.cpp  test_main.cpp  test_proxy_infra.py
